# simple-python-app

./: .flake8  Jenkinsfile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
src/myapp/: __init__.py  app.py  cli.py
src/simple_python_app.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  test_app.py  test_cli.py
